--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@ flex-direction: row;
 }
 .productos {
     width: 40%;
-    height: 100%;
     margin-left: 50px;
+    overflow-y: scroll;
+    max-height: 100vh;
 }
